# synche

./: .cfg.json.example  .gitignore  AGENTS.md  Cargo.toml  INSTALL.md  LICENSE  README.md  justfile
.githooks/: pre-commit
app/: Cargo.toml
app/src/: configv1.rs  main.rs
app/src/application/: entry.rs  mod.rs  peer.rs  state.rs  sync.rs
app/src/application/entry/: handler.rs  ignore.rs  manager.rs  mod.rs
app/src/application/http/: mod.rs  server.rs  service.rs
app/src/application/network/: mod.rs
app/src/application/persistence/: interface.rs
app/src/application/state/: app_state.rs  entry_manager.rs  ignore.rs  mod.rs  peer_manager.rs
app/src/application/watcher/: buffer.rs  file_watcher.rs  interface.rs  mod.rs
app/src/cfg/: config.rs  mod.rs  state.rs
app/src/config/: mod.rs  settings.rs  state.rs
app/src/domain/: chan.rs  config.rs  directory.rs  mod.rs  peer.rs  ports.rs  sse.rs  state.rs  transport.rs  watcher.rs
app/src/domain/cfg/: config.rs  directory.rs  mod.rs  ports.rs
app/src/domain/entry/: info.rs  mod.rs  version.rs
app/src/domain/fs/: mod.rs  path.rs  watcher.rs
app/src/infra/: mod.rs
app/src/infra/http/: api.rs  gui.rs  mod.rs  routes.rs  server.rs
app/src/infra/network/: mdns.rs  tcp.rs
app/src/infra/persistence/: mod.rs  sqlite.rs  sqlite2.rs
app/src/infra/watcher/: notify.rs
app/src/tests/: sqlite.rs
app/src/utils/: dirs.rs  fs.rs  logging.rs  mod.rs  test_support.rs
src/: Cargo.toml  config.rs  entry.rs  file.rs  handshake.rs  main.rs  peer.rs  presence.rs  sync.rs  watcher.rs
src/application/: entry.rs  http.rs  ignore.rs  mod.rs  network.rs  peer.rs  sync.rs  watcher.rs
src/application/network/: mod.rs
src/application/network/presence/: interface.rs  mod.rs  service.rs  servicev2.rs
src/application/network/transport/: interface.rs  mod.rs  receiver.rs  sender.rs  service.rs
src/application/persistence/: interface.rs
src/application/watcher/: buffer.rs  file_watcher.rs  interface.rs  mod.rs
src/domain/: file.rs  filesystem.rs  fs.rs  mod.rs  path.rs  peer.rs  watcher.rs
src/domain/entry/: directory.rs  entry.rs  file_info.rs  info.rs  manager.rs  mod.rs  model.rs  version.rs
src/domain/peer/: manager.rs  mod.rs  model.rs
src/infra/: mod.rs
src/infra/gui/: engine.rs  mod.rs
src/infra/http/api/: mod.rs  routes.rs
src/infra/network/: broadcast.rs  mdns.rs  mod.rs  multicast.rs  tcp.rs  udp.rs
src/infra/persistence/: sqlite.rs
src/infra/watcher/: notify.rs
src/models/: device.rs  entry.rs  file.rs  mod.rs  peer.rs  sync.rs
src/proto/: tcp.rs  transport.rs
src/services/: file.rs  handshake.rs  mod.rs  presence.rs  sync.rs
src/utils/: fs.rs
(+49 files in other folders)
