[package]
name = "synche"
version = "0.0.3-alpha"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
hostname = "0.4.1"
ignore = "0.4.23"
local-ip-address = "0.6.5"
mdns-sd = "0.16.0"
minijinja = "2.12.0"
notify = "8.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
futures = "0.3.31"
futures-util = { version = "0.3.31" }
async-stream = "0.3.6"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
async-trait = "0.1.89"
toml = { version = "0.9.8", features = ["serde"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.23.0"
